# Multi-Agent-Task-Solver

./: .gitignore  ADR.md  AGENTS.md  PROJECT.md  README.md  pyproject.toml
.claude/: settings.json
src/: config.py  events.py  main.py  models.py  orchestrator.py
src/agents/: _helpers.py  aggregator.py  code.py  planner.py  research.py  summary.py
src/tools/: executor.py  search.py
static/: index.html
tests/: conftest.py  test_config.py  test_events.py  test_main.py  test_models.py  test_orchestrator.py
tests/agents/: test_aggregator.py  test_code.py  test_planner.py  test_research.py  test_summary.py
tests/integration/: test_agents_integration.py  test_e2e.py  test_executor_integration.py  test_search_integration.py
tests/tools/: test_executor.py  test_search.py
